Bevel produces duplicated edges #39939

Closed
opened 2014-04-28 19:13:50 +02:00 by ronan ducluzeau · 7 comments

System Information
Ubuntu 12.04 64 bits, Nvidia Quadro 3500 FX

Blender Version
Broken: 49a5c57
Worked: 2.70

Short description of error
Some edges created by bevel tool are duplicated at same location. Or edges existing before Bevel operator are not deleted.
If you add a subdivision surface modifier to resulting mesh, problem is obvious.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Use bevel tool on default cube.
Some moving edges are black while others from same selection of vertices are orange.
As in this blend:
bevel_broken.blend

Try to select and delete one of these black edges.

  • no apparent change to mesh except no more selected edge.
    or

  • selected edge and adjacent faces are deleted. It remains a non selected edge.

**System Information** Ubuntu 12.04 64 bits, Nvidia Quadro 3500 FX **Blender Version** Broken: 49a5c57 Worked: 2.70 **Short description of error** Some edges created by bevel tool are duplicated at same location. Or edges existing before Bevel operator are not deleted. If you add a subdivision surface modifier to resulting mesh, problem is obvious. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Use bevel tool on default cube. Some moving edges are black while others from same selection of vertices are orange. As in this blend: [bevel_broken.blend](https://archive.blender.org/developer/F86304/bevel_broken.blend) Try to select and delete one of these black edges. - > no apparent change to mesh except no more selected edge. or - > selected edge and adjacent faces are deleted. It remains a non selected edge.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @zeauro

Added subscriber: @zeauro

Added subscriber: @mont29

Added subscriber: @mont29
Howard Trickey was assigned by Bastien Montagne 2014-04-28 19:19:53 +02:00

This issue was referenced by blender/blender-addons-contrib@a197d02b03

This issue was referenced by blender/blender-addons-contrib@a197d02b030629bb94b1aeb0f4860e9d728a8503

This issue was referenced by a197d02b03

This issue was referenced by a197d02b030629bb94b1aeb0f4860e9d728a8503
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit a197d02b03.

Closed by commit a197d02b03.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39939
No description provided.