Fix T39939: Undo change of rB27db75363e67, which broke bevel.

The test for wire edges when reattaching was wrong, because
some newly made edges are wire at the point of the test.
This made some duplicate edges.
Need to track the original wire edges a different way.